Closed Bug 1157415 Opened 9 years ago Closed 9 years ago

Intermittent Win32 PGO test_bug732665.xul | Chrome should be invokable from content script with an exhausted stack: 9

Categories

(Core :: XPConnect, defect)

x86
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox38 --- unaffected
firefox39 --- unaffected
firefox40 --- fixed
firefox-esr31 --- unaffected

People

(Reporter: RyanVM, Assigned: shu)

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1119363 +++

This showed up on win32 PGO builds today over this range:
https://treeherder.mozilla.org/#/jobs?repo=mozilla-inbound&filter-searchStr=Windows%20pgo%20moch%20oth&fromchange=e64fa8717641&tochange=c646f3bfcbd9

I'm hoping it's a one-off with this specific build, but getting it on file now in case it turns into a bigger issue. So far, PGO builds on other trunk trees are showing green.

12:00:42 INFO - 1888 INFO TEST-START | js/xpconnect/tests/chrome/test_bug732665.xul
12:00:42 INFO - 1889 INFO TEST-PASS | js/xpconnect/tests/chrome/test_bug732665.xul | Chrome should be able to have at least 10 heavy frames more stack than content: 104, 94
12:00:42 INFO - 1890 INFO TEST-UNEXPECTED-FAIL | js/xpconnect/tests/chrome/test_bug732665.xul | Chrome should be invokable from content script with an exhausted stack: 9 - expected PASS
12:00:42 INFO - MEMORY STAT vsize after test: 638115840
12:00:42 INFO - MEMORY STAT vsizeMaxContiguous after test: 528220160
12:00:42 INFO - MEMORY STAT residentFast after test: 342032384
12:00:42 INFO - MEMORY STAT heapAllocated after test: 114146652
12:00:42 INFO - 1891 INFO TEST-OK | js/xpconnect/tests/chrome/test_bug732665.xul | took 33ms
Shu owns these stack parameters now - probably need a tiny tweak. :-)
Flags: needinfo?(shu)
Depending on how
> I'm hoping it's a one-off with this specific build
goes, this may block inbound merging. Which it already hasn't been able to do for ~22hr.
(In reply to Ryan VanderMeulen [:RyanVM UTC-4] from comment #4)
> Depending on how
> > I'm hoping it's a one-off with this specific build
> goes, this may block inbound merging. Which it already hasn't been able to
> do for ~22hr.

Feel free to disable the test as-needed and NI in the bug.
Added 20 * 1024 more bytes to Win32 stack limit. Try push here:

https://treeherder.mozilla.org/#/jobs?repo=try&revision=7016acf1831a
Flags: needinfo?(shu)
Try run in comment 6 looks all green.
Attachment #8596783 - Flags: review?(bobbyholley)
Attachment #8596783 - Flags: review?(bobbyholley) → review+
https://hg.mozilla.org/mozilla-central/rev/2250a0d01517
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
Assignee: nobody → shu
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: