Bug 1157415 - Tweak XPConnect stack size for 32bit Windows. (r=bholley)